# SphereMLP

./: .gitignore  .whestignore  AGENTS.md  PROGRESS.md  README.md  TECHNICAL_WRITEUP.md  estimator.py  pyproject.toml
.github/workflows/: ci.yml
experiments/: __init__.py  build_splits.py  compare_estimators.py  deduplicate_results.py  make_plots.py  profile_runtime.py  run_ablation.py  run_benchmark.py  run_subprocess_regression.py  study_final_profiles.py  study_rqmc_randomizations.py  train_router.py
experiments/configs/: README.md
manifests/: dataset_splits.json  decisions.md  environment.json  experiments.csv  rejected_methods.md  release_manifest.json
results/raw/: t00_baseline_validator.txt  t00_end_to_end.json  t00_root_validator.txt  t00_starter_tests.txt  t02_reference_validation.json  t03_moment_validation.json  t04_scalar_mini.json  t05_covariance_validation.json  t06_mini_subprocess_extended.json  (+7 more)
submission/: estimator.py
tests/: reference_impl.py  test_config.py  test_contract.py  test_covariance.py  test_experiment_artifacts.py  test_failure_injection.py  test_fusion.py  test_guards.py  test_moments_bivariate.py  test_moments_univariate.py  test_positive_homogeneity.py  test_reference_mc.py  test_sampling.py  test_scalar.py  test_splits.py  test_standalone_submission.py
tools/: audit_package.py  config_hash.py  freeze_release.py  repair_submission_manifest.py
whest_solution/: __init__.py  calibrator.py  config.py  contracts.py  covariance.py  diagnostics.py  fusion.py  guards.py  k3.py  moments.py  router.py  sampling.py  scalar.py
(+4 files in other folders)
