[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-whest-2026-solution"
version = "0.1.0"
description = "Reproducible ARC White-Box Estimation Challenge 2026 estimator"
requires-python = ">=3.10"
dependencies = [
    "flopscope>=0.8.0rc5,<0.9.0",
    "whestbench>=0.12.0rc3,<0.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.setuptools]
packages = ["whest_solution"]
py-modules = ["estimator"]
